2008-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-clear-contents): Remove useless tags.

2008-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-clear-contents): Gather all significant
	contents.

2009-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnshimbun.el (nnshimbun-marks-is-evil, nnshimbun-marks-file-name)
	(nnshimbun-marks, nnshimbun-marks-modtime): New variables.
	(nnshimbun-group-pathname): New function that replaces
	nnshimbun-nov-directory and nnshimbun-nov-file-name.
	(nnshimbun-nov-directory, nnshimbun-nov-file-name): Abolish.
	(nnshimbun-open-nov): Use nnshimbun-group-pathname instead of
	nnshimbun-nov-file-name.
	(nnshimbun-write-nov): Use nnshimbun-group-pathname instead of
	nnshimbun-nov-directory and nnshimbun-nov-file-name.
	(nnshimbun-request-delete-group): Use nnshimbun-group-pathname instead
	of nnshimbun-nov-directory.
	(nnshimbun-request-set-mark, nnshimbun-marks-changed-p)
	(nnshimbun-request-update-info, nnshimbun-possibly-create-directory)
	(nnshimbun-save-marks, nnshimbun-open-marks): New functions.

2009-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-clear-contents): Remove blogs link.

2009-10-05  David Engster  <dengste@eml.cc>

	* sb-heise.el (shimbun-heise-get-newsticker-headers)
	(shimbun-heise-wash-newsticker-article): Updated regular expressions.
	Use shimbun-remove-tags instead of delete-region.
	* sb-perlentaucher-de.el (shimbun-clear-contents): RSS does not point
	to teaser anymore, so loading of new URL removed.

2008-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-index-url): Update url for m-magazine-en.
	(shimbun-clear-contents): Fix regexps.

2008-09-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el: Support Hatoyama Cabinet E-mail Magazine.

2009-09-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-multi.el: Autoload shimbun-shallow-rendering.

	* sb-impress.el (shimbun-impress-groups-alist): Add car group by
	request.
